added nintendo logo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Ganondorf - Accueil</title>
 </head>
 <body>
-    
+    <!--Barre de navigation-->
+    <table width="600">
+        <tr>
+            <th><a href="index.html"><img src="images\Nintendo.svg.png" style="float:left;"/></a></th>
+            <th><a href="#two">Les horaires</a></th>
+            <th><a href="#three">Les modules</a></th>
+            <th><a href="Tarifs.html">Tarifs</a></th>
+            <a href="Profil.html"><img src="images\etudiant.png" style="float:right;"/></a>
+        </tr>
+    </table>
 </body>
 </html>
