size of nintendo dimunded

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <!--Barre de navigation-->
     <table width="600">
         <tr>
-            <th><a href="index.html"><img src="images\Nintendo.svg.png" style="float:left;"/></a></th>
-            <th><a href="#two">Les horaires</a></th>
-            <th><a href="#three">Les modules</a></th>
-            <th><a href="Tarifs.html">Tarifs</a></th>
+            <th><a href="https://www.nintendo.com/"><img src="images\Nintendo.svg.png" style="float:left;"/></a></th>
+            <th><a href="index.html">Accueil</a></th>
+            <th><a href="#two">À propos</a></th>
+            <th><a href="#three">Contact</a></th>
+            <th><a href="Tarifs.html">Liste de mouvements</a></th>
             <a href="Profil.html"><img src="images\etudiant.png" style="float:right;"/></a>
         </tr>
     </table>
