--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Barre de navigation-->
     <table width="600">
         <tr>
-            <th><a href="https://www.nintendo.com/"><img src="images\Nintendo.svg.png" style="float:left;"/></a></th>
+            <th><a href="https://www.nintendo.com/"><img src="images\Nintendo.svg.png" style="float:left;" width="40%" height="40%"/></a></th>
             <th><a href="index.html">Accueil</a></th>
             <th><a href="#two">À propos</a></th>
             <th><a href="#three">Contact</a></th>
