--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="a propos.css">
     <title>Ganondorf - Accueil</title>
 </head>
 <body>
     <!--Barre de navigation-->
-    <table width="600">
-        <tr>
-            <th><a href="https://www.nintendo.com/"><img src="images\Nintendo.svg.png" style="float:left;" width="40%" height="40%"/></a></th>
-            <th><a href="index.html">Accueil</a></th>
-            <th><a href="#two">À propos</a></th>
-            <th><a href="#three">Contact</a></th>
-            <th><a href="Tarifs.html">Liste de mouvements</a></th>
-            <a href="Profil.html"><img src="images\etudiant.png" style="float:right;"/></a>
-        </tr>
-    </table>
+    <div class="banner">
+        <div class="container">
+            <img src="images\Nintendo.svg.png" height="20" alt="Logo nintendo">
+            <a href="index.html">Acceuil</a>
+            <a href="index.html#a propos">À propos</a>
+            <a href="index.html#Contact">Conatct</a>
+            <a href="index.html#Liste de mouvements">Liste de Mouvement</a>
+        </div>
+    </div>
 </body>
 </html>
