--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <!--Barre de navigation-->
     <div class="banner">
         <div class="container">
-            <img src="images\Nintendo.svg.png" height="20" alt="Logo nintendo">
-            <a href="index.html">Acceuil</a>
-            <a href="index.html#a propos">À propos</a>
-            <a href="index.html#Contact">Conatct</a>
-            <a href="index.html#Liste de mouvements">Liste de Mouvement</a>
+            <img src="images\Nintendo.svg.png" height="40" alt="Logo nintendo">
+            <a href="index.html">ACCUEIL</a>
+            <a href="index.html#a propos">À PROPOS</a>
+            <a href="index.html#Contact">CONTACT</a>
+            <a href="index.html#Liste de mouvements">LISTE DE MOUVEMENTS</a>
         </div>
     </div>
+    <img src="images\SSBU-Battlefield.webp" width="100%" height="100%"/>
+
 </body>
 </html>
