--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             <a href="index.html#Liste de mouvements">LISTE DE MOUVEMENTS</a>
         </div>
     </div>
-    <img src="images\SSBU-Battlefield.webp" width="100%" height="100%"/>
-
+    <img class="image1" src="images\SSBU-Battlefield.webp" width="100%" height="100%"/>
+    <img class="image2" src="images\800px-Ganondorf_SSBU.webp" width="100%" height="150%"/>
+    
+    <img src="images\ss_3.png" width="100%" height="100%"/>
+    <div class="footer">
+    <img src="images\png.png" width="65%" height="65%"/>
+    </div>
 </body>
 </html>
