Ajout de l'image en background sur Liste de mouvemements

--- a/A propos.html
+++ b/A propos.html
@@ -9,7 +9,7 @@
 <body>
     <div class="banner">
         <div class="container">
-            <a href="https://www.nintendo.com/fr-ca/" target=""><img src="d:\Users\6241884\OneDrive - Collège de Bois-de-Boulogne\1 session\web\TP3\TP3\images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
+            <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
             <a href="index.html">Acceuil</a>
             <a href="index.html#a propos">À propos</a>
             <a href="index.html#Contact">Conatct</a>
@@ -18,7 +18,7 @@
     </div>
     <h1>À Propos</h1>
     <div class=ganon>
-    <img src="d:\Users\6241884\OneDrive - Collège de Bois-de-Boulogne\1 session\web\TP3\TP3\images\ganondorf-ssbu.jpg" alt="ganon">
+    <img src="images\ganondorf-ssbu.jpg" alt="ganon">
     </div>
    <div class="paragraphe">
                 <h3>PRÉSENTATION DU PROJET</h3>
@@ -67,7 +67,7 @@
                 </p>
             </div>
     <div class="down">
-        <img src="d:\Users\6241884\OneDrive - Collège de Bois-de-Boulogne\1 session\web\TP3\TP3\images\MicrosoftTeams-image.png" width="65%" height="65%" alt="all link">
+        <img src="images\png.webp" width="65%" height="65%" alt="all link">
     </div>
 </body>
 </html>
