--- a/ListesMouvements.html
+++ b/ListesMouvements.html
@@ -9,10 +9,17 @@
 <body>
     <div class="banner">
         <div class="container">
-            <a href="https://www.nintendo.com/fr-ca/" target=""><img src="d:\Users\6241884\OneDrive - Collège de Bois-de-Boulogne\1 session\web\TP3\TP3\images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
+            <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
             <a href="index.html">Acceuil</a>
             <a href="index.html#a propos">À propos</a>
             <a href="index.html#Contact">Conatct</a>
             <a href="index.html#Liste de mouvements">Liste de Mouvement</a>
         </div>
     </div>
+     <div class="h1">
+    <h1>LISTE DE MOUVEMENTS</h1>
+      </div>
+    <div class="down">
+        <img src="images\png.webp" width="65%" height="65%" alt="all link">
+    </div>
+</body>
