--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="a propos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
     <title>Ganondorf - Accueil</title>
 </head>
 <body>
@@ -18,9 +21,13 @@
         </div>
     </div>
     <img class="image1" src="images\SSBU-Battlefield.webp" width="100%" height="100%"/>
+    <img class="image2" src="images\GANON%20PS.png" width="100%" height="100%"/>
     <img class="image2" src="images\800px-Ganondorf_SSBU.webp" width="100%" height="150%"/>
     
     <img src="images\ss_3.png" width="100%" height="100%"/>
+    <iframe width="896" height="504" src="https://www.youtube.com/embed/Q7pzoLQlrsM?autoplay=1&mute=1&loop=1"></iframe>
+    <h1 class>RELEVEZ LE DÉFI, AFFRONTEZ GANONDORF!</h1>
+    <p>Découvrez l'impitoyable seigneur de la haine, Ganondorf, sur Super Smash Bros. Ultimate! Incarnant la quintessence du mal, ce puissant antagoniste de la série Legend of Zelda déchaîne sa force brute dans chaque combat. Explorez son arsenal dévastateur et plongez dans la noirceur de ce personnage emblématique.</p>
     <div class="footer">
     <img src="images\png.png" width="65%" height="65%"/>
     </div>
