--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     
     <img src="images\ss_3.png" width="100%" height="100%"/>
     <iframe width="896" height="504" src="https://www.youtube.com/embed/Q7pzoLQlrsM?autoplay=1&mute=1&loop=1"></iframe>
-    <h1 class>RELEVEZ LE DÉFI, AFFRONTEZ GANONDORF!</h1>
-    <p>Découvrez l'impitoyable seigneur de la haine, Ganondorf, sur Super Smash Bros. Ultimate! Incarnant la quintessence du mal, ce puissant antagoniste de la série Legend of Zelda déchaîne sa force brute dans chaque combat. Explorez son arsenal dévastateur et plongez dans la noirceur de ce personnage emblématique.</p>
+    <p>
+        <h1>RELEVEZ LE DÉFI, AFFRONTEZ GANONDORF!</h1>
+        <h2>Découvrez l'impitoyable seigneur de la haine, Ganondorf, sur Super Smash Bros. Ultimate!<br>
+        Incarnant la quintessence du mal, ce puissant antagoniste de la série Legend of Zelda déchaîne sa force brute dans chaque combat.<br>
+        Explorez son arsenal dévastateur et plongez dans la noirceur de ce personnage emblématique.</h2>
+    </p>
     <div class="footer">
     <img src="images\png.png" width="65%" height="65%"/>
     </div>
