Changements de liens

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <!--Barre de navigation-->
     <div class="banner">
         <div class="container">
-            <img src="images\Nintendo.svg.png" height="40" alt="Logo nintendo">
+            <img src="images\nintendo-logo-1-1.png" height="40" alt="Logo nintendo">
             <a href="index.html">ACCUEIL</a>
-            <a href="index.html#a propos">À PROPOS</a>
-            <a href="index.html#Contact">CONTACT</a>
-            <a href="index.html#Liste de mouvements">LISTE DE MOUVEMENTS</a>
+            <a href="A propos.html">À PROPOS</a>
+            <a href="Contact.html">CONTACT</a>
+            <a href="ListesMouvements.html">LISTE DE MOUVEMENTS</a>
         </div>
     </div>
+
+    <!--Page-->
     <img class="image1" src="images\SSBU-Battlefield.webp" width="100%" height="100%"/>
     <img class="image2" src="images\GANON%20PS.png" width="100%" height="100%"/>
     <img class="image2" src="images\800px-Ganondorf_SSBU.webp" width="100%" height="150%"/>
