Ajout du lien vers le site Nintendo sur le logo

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
         <!--Barre de navigation-->
         <div class="banner">
             <div class="container">
-                <img src="images\nintendo-logo-1-1.png" height="40" alt="Logo nintendo">
+                <a href="https://www.nintendo.com/fr-ca/" target=""></a><img src="images\nintendo-logo-1-1.png" height="40" alt="Logo nintendo">
                 <a href="index.html">ACCUEIL</a>
                 <a href="A propos.html">À PROPOS</a>
                 <a href="Contact.html">CONTACT</a>
