Fin de la dernière page

--- a/ListesMouvements.html
+++ b/ListesMouvements.html
@@ -19,7 +19,61 @@
      <div class="h1">
     <h1>LISTE DE MOUVEMENTS</h1>
       </div>
-    <div class="down">
+  <table>
+      <div class="paragraphe">
+ <tr>
+    <th>
+Neutral special<br>
+<div class="gras">Warlock Punch</div>
+     </th>
+     <th>
+        <img src="images\GanondorfWarlockPunchSSBM.gif" >
+     </th>
+</tr>
+<br>
+<tr>
+    <th>
+Side speciaL<br>
+<div class="gras">Flame Choke<br></div>
+     </th>
+     <th>
+        <img src="images\GanondorfGerudoDragonSearchSSBM.gif" >
+     </th>
+</tr>
+<br>
+<tr>
+    <th>
+Up special<br>
+<div class="gras">Dark Dive<br></div>
+     </th>
+     <th>
+        <img src="images\GanondorfDarkDiveSSBM.gif" >
+     </th>
+</tr>
+<br>
+<tr>
+    <th>
+Down special<br>
+<div class="gras">Wizard's Foot<br></div>
+    </th>
+    <th>
+        <img src="images\GanondorfWizardsFootSSBM.gif" >
+    </th>
+</tr>
+<br>
+<tr>
+    <th>
+Final Smash<br>
+<div class="gras">Ganon, The Demon King<br>
+    </th>
+    <th>
+        <img src="images\Ganondorf_Final_Smash_SSBU.gif" >
+    </th>
+</tr>
+</div>
+</table>
+</div>
+<div class="down">
         <img src="images\png.webp" width="65%" height="65%" alt="all link">
     </div>
 </body>
