--- a/Contact.html
+++ b/Contact.html
@@ -20,6 +20,27 @@
                 <a href="ListesMouvements.html">LISTE DE MOUVEMENTS</a>
             </div>
         </div>
-        <img src="images\Super-Smash-Bros-Ultimate-Legend-of-Zelda-Stages.webp" width="100%" height="100%"/>
+
+        <!--Page-->
+        <div class="container">
+            <img src="images\Super-Smash-Bros-Ultimate-Legend-of-Zelda-Stages.webp" width="100%" height="100%"/>
+            <div class="centered-text">
+                <h1>Contact</h1>
+            </div>
+            <div class="form"><form>
+            <label for="fname">Nom:</label>
+            <input type="text" id="fname" name="fname"><br>
+            <label for="lname">E-mail:</label>
+            <input type="text" id="lname" name="lname"><br><br>
+            <input type="submit" value="Submit">
+          </form> </div>
+          <textarea rows="4" cols="50" name="comment" form="usrform">
+            Enter text here...</textarea>
+        </div>
+
+        <div class="footer">
+            <img src="images\png.png" width="65%" height="65%"/>
+            </div>
+
 </body>
 </html>
