--- a/Contact.html
+++ b/Contact.html
@@ -34,8 +34,8 @@
             <input type="text" id="lname" name="lname"><br><br>
             <input type="submit" value="Submit">
           </form> </div>
-          <textarea rows="4" cols="50" name="comment" form="usrform">
-            Enter text here...</textarea>
+        <div><textarea rows="4" cols="50" name="comment" form="usrform">
+            Enter text here...</textarea></div>
         </div>
 
         <div class="footer">
