--- a/ListesMouvements.html
+++ b/ListesMouvements.html
@@ -10,10 +10,10 @@
     <div class="banner">
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
-            <a href="index.html">Acceuil</a>
-            <a href="index.html#a propos">À propos</a>
-            <a href="index.html#Contact">Conatct</a>
-            <a href="index.html#Liste de mouvements">Liste de Mouvement</a>
+            <a href="index.html">ACCUEIL</a>
+            <a href="A propos.html">À PROPOS</a>
+            <a href="Contact.html">CONTACT</a>
+            <a href="ListesMouvements.html">LISTE DE MOUVEMENTS</a>
         </div>
     </div>
      <div class="h1">
