--- a/Contact.html
+++ b/Contact.html
@@ -23,7 +23,7 @@
 
         <!--Page-->
         <div class="container">
-            <img src="images\Super-Smash-Bros-Ultimate-Legend-of-Zelda-Stages.webp" width="100%" height="100%"/>
+            <img src="images\Super-Smash-Bros-Ultimate-Legend-of-Zelda-Stages copie.webp" width="100%" height="100%"/>
             <div class="centered-text">
                 <h1>Contact</h1>
             </div>
