--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
             <input type="text" id="lname" name="lname"><br><br>
             <input type="submit" value="Submit">
           </form> </div>
-        <div><textarea rows="4" cols="50" name="comment" form="usrform">
+        <div class="centered"><textarea rows="4" cols="50" name="comment" form="usrform">
             Enter text here...</textarea></div>
         </div>
 
