Ajout des commentaire

--- a/ListesMouvements.html
+++ b/ListesMouvements.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="ListesMOuvements.css">
 </head>
 <body>
+    <!--Haut de la page-->
     <div class="banner">
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
@@ -19,6 +20,7 @@
      <div class="h1">
     <h1>LISTE DE MOUVEMENTS</h1>
       </div>
+      <!--Tout les mouvements-->
   <table>
       <div class="paragraphe">
  <tr>
@@ -73,6 +75,7 @@ Final Smash<br>
 </div>
 </table>
 </div>
+<!--Bas de la page-->
 <div class="down">
         <img src="images\png.webp" width="65%" height="65%" alt="all link">
     </div>
