--- a/A propos.html
+++ b/A propos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="a propos.css">
 </head>
 <body>
+    <!--Haut de la page-->
     <div class="banner">
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
@@ -20,6 +21,7 @@
     <div class=ganon>
     <img src="images\ganondorf-ssbu.jpg" alt="ganon">
     </div>
+    <!--Texte De la page-->
    <div class="paragraphe">
                 <h3>PRÉSENTATION DU PROJET</h3>
                 <p>
@@ -66,6 +68,7 @@
 
                 </p>
             </div>
+            <!--Bas de la page-->
     <div class="down">
         <img src="images\png.webp" width="65%" height="65%" alt="all link">
     </div>
