Modification du font

--- a/A propos.html
+++ b/A propos.html
@@ -11,10 +11,10 @@
     <div class="banner">
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
-            <a href="index.html">Acceuil</a>
-            <a href="index.html#a propos">À propos</a>
-            <a href="index.html#Contact">Conatct</a>
-            <a href="index.html#Liste de mouvements">Liste de Mouvement</a>
+            <a href="index.html">ACEUILL</a>
+            <a href="index.html#a propos">À PROPOS</a>
+            <a href="index.html#Contact">CONTACT</a>
+            <a href="index.html#Liste de mouvements">LISTE DES MOUVEMENTS</a>
         </div>
     </div>
     <h1>À Propos</h1>
