Path entre les pages

--- a/A propos.html
+++ b/A propos.html
@@ -12,9 +12,9 @@
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
             <a href="index.html">ACEUILL</a>
-            <a href="index.html#a propos">À PROPOS</a>
-            <a href="index.html#Contact">CONTACT</a>
-            <a href="index.html#Liste de mouvements">LISTE DES MOUVEMENTS</a>
+            <a href="A propos.html">À PROPOS</a>
+            <a href="Contact.html">CONTACT</a>
+            <a href="ListesMouvements.html">LISTE DES MOUVEMENTS</a>
         </div>
     </div>
     <h1>À Propos</h1>
