--- a/A propos.html
+++ b/A propos.html
@@ -11,7 +11,7 @@
     <div class="banner">
         <div class="container">
             <a href="https://www.nintendo.com/fr-ca/" target=""><img src="images\nintendo-logo-1-1.png" height="25" alt="Logo nintendo"></a>
-            <a href="index.html">ACEUILL</a>
+            <a href="index.html">ACCEUIL</a>
             <a href="A propos.html">À PROPOS</a>
             <a href="Contact.html">CONTACT</a>
             <a href="ListesMouvements.html">LISTE DES MOUVEMENTS</a>
