--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         Incarnant la quintessence du mal, ce puissant antagoniste de la série Legend of Zelda déchaîne sa force brute dans chaque combat.<br>
         Explorez son arsenal dévastateur et plongez dans la noirceur de ce personnage emblématique.</h2>
     </p>
-    <div class="footer">
+    <audio src="Audio\y2mate.is - ganondorf_battle___the_legend_of_zelda__ocarina_of_time-fSrJ2CKq8PY-192k-1701909381.mp3" autoplay ></audio>
+    <div>
     <img src="images\png.png" width="65%" height="65%"/>
     </div>
 </body>
