--- a/Contact.html
+++ b/Contact.html
@@ -32,10 +32,15 @@
             <input type="text" id="fname" name="fname"><br>
             <label for="lname">E-mail:</label>
             <input type="text" id="lname" name="lname"><br><br>
-            <textarea rows="4" cols="50" name="comment" form="usrform">Enter text here...</textarea><br>
-            <input type="submit" value="Submit">
-          </form> </div>
+            <textarea rows="4" cols="50" name="comment" form="usrform"></textarea><br>
+            <input type="submit" value="Envoyer">
+          </form>
+        </div>
+        <div class="footer">
+            <img src="images\png.png" width="65%" height="65%"/>
+            </div>
 
+            <audio src="Audio\y2mate.is - ganondorf_battle___the_legend_of_zelda__ocarina_of_time-fSrJ2CKq8PY-192k-1701909381.mp3" autoplay controls ></audio>
 
 </body>
 </html>
