--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,12 @@
             <img src="images\png.png" width="65%" height="65%"/>
             </div>
 
-            <audio src="Audio\y2mate.is - ganondorf_battle___the_legend_of_zelda__ocarina_of_time-fSrJ2CKq8PY-192k-1701909381.mp3" autoplay controls ></audio>
+            <div class="audio">
+                <audio src="Audio\y2mate.is - ganondorf_battle___the_legend_of_zelda__ocarina_of_time-fSrJ2CKq8PY-192k-1701909381.mp3" type="audio/mp3">
+                </audio>
+                </div>
+
+
 
 </body>
 </html>
